Perkin-UAT/force-app/main/default/objects/SMAX_PS_Additional_Work_Centers__c/SMAX_PS_Additional_Work_Centers__c.object-meta.xml
<CustomObject>
    <description>Record show the work centers a Technician is allowed to work in.</description>
    <label>Additional Work Center</label>
    <nameField>
        <displayFormat>WC-{000000}</displayFormat>
        <label>Additional Work Center Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Work Centers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>