Perkin-UAT/force-app/main/default/objects/SMAX_PS_Additional_Work_Centers__c/fields/SMAX_PS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_External_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Technician ID + - + Plant</inlineHelpText>
    <label>External ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>