Perkin-UAT/force-app/main/default/objects/SMAX_PS_Additional_Work_Centers__c/fields/SMAX_PS_Plant_Work_Center__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Plant_Work_Center__c</fullName>
    <formula>SMAX_PS_Plant__c &amp; SMAX_PS_Work_Center__c</formula>
    <label>Plant Work Center</label>
    <type>Text</type>
</CustomField>