Perkin-UAT/force-app/main/default/objects/SMAX_PS_Additional_Work_Centers__c/fields/SMAX_PS_Technician_Equipment__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Technician_Equipment__c</fullName>
    <label>Technician/Equipment</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Additional Work Centers</relationshipLabel>
    <relationshipName>Additional_Work_Centers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>