Perkin-UAT/force-app/main/default/objects/SMAX_PS_Additional_Work_Centers__c/fields/SMAX_PS_Work_Center__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Center__c</fullName>
    <label>Work Center</label>
    <length>15</length>
    <type>Text</type>
</CustomField>